[package]
name = "paclog"
version = "0.1.0"
edition = "2021"
authors = ["Cody Bloemhard <codybloemhard@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://gitlab.com/codybloemhard/paclog"
description = "A tool to query the pacman log file."
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
zen-colour = "1.0.1"
vec-string = "0.2.0"
