[package]
name = "paclog"
version = "2.0.0"
edition = "2021"
authors = ["Cody Bloemhard <codybloemhard@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://gitlab.com/codybloemhard/paclog"
description = "A tool to query the pacman log file."
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
zen-colour = "1.1.1"
vec-string = "0.2.0"
term_size = "0.3.2"
simpleio = "0.2.2"
